--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,21 +6,24 @@ import '../styles/global.css';
 
 <Layout title="Lord Chatterley">
 	<main>
-		<div class="pure-g">
-			<div class="pure-u-1" id="header-panel"> 
-				<h1>Chat with Lord Chatterley</h1>
-			</div>
-			<div class="pure-u-1" id="chat-panel"> 
-			</div>
-			<div class="pure-u-1" id="question-panel"> 	
-				<sl-card style="width: 100%; position: absolute; bottom: 0;">
-					<div class="pure-g">
-						<div class="pure-u-1 pure-u-md-7-8" id="chat-panel"> 
-						<sl-textarea size="small" resize="auto" placeholder="Input your prompt here" id="question-field">
 
-						</sl-textarea> 
-					</div>
-					<div class="pure-u-1 pure-u-md-1-8" id="chat-panel" style="text-align: right;"> 
+		<div id="header-panel"> 
+			<h1>Chat with Lord Chatterley</h1>
+		</div>
+
+		<div class="chat-container">
+			<div class="conversation-history">
+				<div id="chat-panel">
+
+				</div>
+				<sl-card style="width: 100%;" class="user-message">
+					<div class="pure-g">
+						<div class="pure-u-1 pure-u-md-7-8"> 
+							<sl-textarea size="small" resize="auto" placeholder="Input your prompt here" id="question-field">
+								
+							</sl-textarea> 
+						</div>
+						<div class="pure-u-1 pure-u-md-1-8" style="text-align: right;"> 
 							<sl-button variant="primary" outline id="submit-button">
 								<sl-icon slot="suffix" name="caret-right-square-fill"></sl-icon>
 								Submit
@@ -30,62 +33,82 @@ import '../styles/global.css';
 				</sl-card>
 			</div>
 		</div>
+		
+		
 	</main>
 </Layout>
 
 
 <script>
+	import { v4 as uuidv4 } from 'uuid';
+
 	const button = document.querySelector('sl-button');
 	
-
+	
 	async function chat() {
-
+		
 		const chatPanel = document.getElementById("chat-panel");
 		const questionField = document.getElementById("question-field");
 		const questionCard = document.createElement("sl-card");
 		questionCard.classList.add("question");
-		const question = questionField.value;
-		questionField.value = "";
-		// Set card content (optional)
-		const questionContent = document.createElement("p");
-		questionContent.textContent = question;
-		questionCard.appendChild(questionContent);
-		
-		// Insert the card element into the container
-		chatPanel.appendChild(questionCard);
-		// Send request to server
-		const data = {
-			"prompt": question
-		};
-		
-		const response = await fetch("./api/chat", 
-		{
-			method: "POST", // *GET, POST, PUT, DELETE, etc.
-			mode: "cors", // no-cors, *cors, same-origin
-			cache: "no-cache", // *default, no-cache, reload, force-cache, only-if-cached
-			credentials: "include", // include, *same-origin, omit
-			headers: {
-				"Content-Type": "application/json"
-			},
-			redirect: "follow", // manual, *follow, error
-			referrerPolicy: "no-referrer", // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
-			body: JSON.stringify(data), // body data type must match "Content-Type" header
-		});
-		
-  		const responseBody = await response.text();
-		const responseJson = JSON.parse(responseBody);
-		const answer = responseJson.response;
+		const question = questionField.value.trim();
+		if(question) {
+			const answerUuid = uuidv4();
 
-		const responseCard = document.createElement("sl-card");
-		responseCard.classList.add("response");
-		// Set card content (optional)
+			questionField.value = "";
+			// Set card content (optional)
+			const questionContent = document.createElement("p");
+			questionContent.textContent = question;
+			questionCard.appendChild(questionContent);
+			
+			// Insert the card element into the container
+			chatPanel.appendChild(questionCard);
+			const progressBar = document.createElement("sl-progress-bar");
+			progressBar.indeterminate = true;
+			progressBar.id="pg-bar";
+			chatPanel.appendChild(progressBar);
 
-		const responseContent = document.createElement("p");
-		responseContent.textContent = answer;
-		responseCard.appendChild(responseContent);
-		
-		// Insert the card element into the container
-		chatPanel.appendChild(responseCard);
+			
+			// Send request to server
+			const data = {
+				"prompt": question,
+				"uuid": answerUuid
+			};
+			
+			const response = await fetch("./api/chat", 
+			{
+				method: "POST", // *GET, POST, PUT, DELETE, etc.
+				mode: "cors", // no-cors, *cors, same-origin
+				cache: "no-cache", // *default, no-cache, reload, force-cache, only-if-cached
+				credentials: "include", // include, *same-origin, omit
+				headers: {
+					"Content-Type": "application/json"
+				},
+				redirect: "follow", // manual, *follow, error
+				referrerPolicy: "no-referrer", // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
+				body: JSON.stringify(data), // body data type must match "Content-Type" header
+			});
+			
+			const responseBody = await response.text();
+			const responseJson = JSON.parse(responseBody);
+			const answer = responseJson.response;
+			
+			const responseCard = document.createElement("sl-card");
+			responseCard.id = answerUuid;
+			responseCard.classList.add("response");
+			// Set card content (optional)
+			
+			const responseContent = document.createElement("p");
+			responseContent.textContent = answer;
+			responseCard.appendChild(responseContent);
+			
+			// Insert the card element into the container
+			chatPanel.appendChild(responseCard);
+		}
+		const progressBar = document.getElementById("pg-bar");
+		if(progressBar) {
+			progressBar.remove();
+		}
 	};
 
 	button.addEventListener('click', event => {
